--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -94,8 +94,8 @@
         var name = "";
         var trueid = 0;
         alert(idClicked);
-        "{% for items in cli %}"
-        if ('{{ items.idClient }}' == idClicked) {
+        "{% for items in entree %}"
+        if ('{{ items.idBonLivraisonEntree }}' == idClicked) {
             name = '{{ items.nom }}';
             trueid = '{{ items.id }}';
         }
@@ -111,7 +111,7 @@
             url:"/ble/delete/", //lien de la view qui gère la requête post pour supprimer une entree
             data: {
                 'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-                'id': idClicked, // id du transporteur acquis grace a une incrementation en js
+                'id': idClicked,
                 csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             success: function(msg, data, settings){
