--- a/djangoproject/gestion_stock/templates/clientmodify.html
+++ b/djangoproject/gestion_stock/templates/clientmodify.html
@@ -171,22 +171,15 @@
                         <table id="dtBasicExample1" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"> modify </th>
-                                <th scope="col" class="th-sm"> nom </th>
+                                <th scope="col" class="th-sm text-center"> modify </th>
+                                <th scope="col" class="th-sm text-center"> nom </th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
                             <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
+                                <td></td>
+                                <td></td>
                             </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
 
@@ -194,55 +187,40 @@
                 </div>
                 <div class="col-md-auto border shadow-lg p-3 mb-5 bg-white rounded mr-2 ml-1">
                     Bons de livraison entree
-
                     <div class="table-responsive">
                         <table id="dtBasicExample2" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"> modify </th>
-                                <th scope="col" class="th-sm"> nom </th>
+                                <th scope="col" class="th-sm text-center"> modify </th>
+                                <th scope="col" class="th-sm text-center"> num. b.l </th>
+                                <th scope="col" class="th-sm text-center"> delete </th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
                             <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
-
                 </div>
-
                 <div class="col-md-auto border shadow-lg p-3 mb-5 bg-white rounded mr-2 ml-1">
                     Ordre de transport
                     <div class="table-responsive">
                         <table id="dtBasicExample3" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                             <thead>
                             <tr>
-                                <th scope="col" class="th-sm"> modify </th>
-                                <th scope="col" class="th-sm"> nom </th>
+                                <th scope="col" class="th-sm text-center"> modify </th>
+                                <th scope="col" class="th-sm text-center"> nom </th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
                             <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
+                                <td></td>
+                                <td></td>
                             </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -525,13 +503,50 @@
         "scrollX": true,
         "scrollY": 200,
       });*/
+        $('#dtBasicExample1').find('tr').eq(1).remove();
+        $('#dtBasicExample2').find('tr').eq(1).remove();
+        $('#dtBasicExample3').find('tr').eq(1).remove();
+        '{% for items in entree %}'
+            console.log("entree");
+            if ('{{ items.fk_Client.nom }}' == $('#nom').val()) {
+                $('#dtBasicExample2')
+                    .append('<tr><td class=\'text-center\'><button class=\'resetb dyna\' id=\"{{ items.idBonLivraisonEntree }}\"><i class=\"fas fa-arrow-right\"></i></button></td>' +
+                        '<td class=\'text-center\'>{{ items.numeroBonLivraison }}</td><td><button class=\'resetb btn btn-light btn-sm dynad\' id=\"{{ items.idBonLivraisonEntree }}\"><i class=\"fas fa-trash-alt\"></i></button></td></tr>');
+            }
+        '{% endfor %}'
+
+        '{% for items in bcs %}'
+        console.log("entree");
+        $('#dtBasicExample1')
+            .append('<tr><td><td contenteditable=\'true\'></td><td><button class="deleteur">X</button></td></tr>');
+        '{% endfor %}'
+
+        '{% for items in odt %}'
+        console.log("entree");
+        $('#dtBasicExample3')
+            .append('<tr><td><td contenteditable=\'true\'></td><td><button class="deleteur">X</button></td></tr>');
+        '{% endfor %}'
         $('#dtBasicExample1').DataTable();
         $('#dtBasicExample2').DataTable();
         $('#dtBasicExample3').DataTable();
         $('.dataTables_length').addClass('bs-select');
 
-        /*    var table = $('#dtHorizontalVerticalExample').DataTable();
+        $('.dyna').click(function () {
+            console.log("this id = " + $(this).attr('id'));
+            var idClicked = $(this).attr('id');
+            var name = "";
+            var trueid = 0;
+            alert(idClicked);
+            "{% for items in entree %}"
+            if ('{{ items.idBonLivraisonEntree }}' == idClicked) {
+                name = '{{ items.nom }}';
+                trueid = '{{ items.id }}';
+            }
+            "{% endfor %}"
+            window.location.href = "{% url 'bonLivraisonEntreemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+        });
 
+        /*    var table = $('#dtHorizontalVerticalExample').DataTable();
             $('#contactbody').on( 'click', '.deleteur', function () {
              table
                  .row( $(this).parents('tr') )
