ligne ble GG & ble GG Début UM.E
Je commence les UM Entrees

--- a/djangoproject/djangoproject/static/css/style.css
+++ b/djangoproject/djangoproject/static/css/style.css
@@ -202,3 +202,19 @@ table.dataTable thead .sorting_desc_disabled:before {
   top: 21px;
   left: 8px;
   }
+
+.custom-combobox {
+  position: relative;
+  display: inline-block;
+}
+.custom-combobox-toggle {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-left: -1px;
+  padding: 0;
+}
+.custom-combobox-input {
+  margin: 0;
+  padding: 5px 10px;
+}
