--- a/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreeadd.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<style>
+<style xmlns="http://www.w3.org/1999/html">
     .ui-dialog-titlebar-close {
         visibility: hidden;
     }
@@ -12,62 +12,72 @@
     .validateTips { border: 1px solid transparent; padding: 0.3em;}
 </style>
 
-<div class="container"><h1 class="text-center"> Ajout de D'U.M Entree</h1></div>
+<div class="container"><h1 class="text-center"> Ajout d'U.M Entree</h1></div>
 <br>
 
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
-        </div>
-        <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-        </div>
-        <div class="col">
-            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
         </div>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="border shadow-lg p-3 mb-5 bg-white rounded col-md-auto">
-            <div class="col">
-
-                <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            b
-                        </div>
-                        <div class="row">
-                            a
-                        </div>
-                    </div>
-                    <div class="col">
-                        bon
-                    </div>
-                    <div class="col">
-                        zone depot
-                    </div>
-                </div>
-                <div class="row">
-                    a
+        <div class="border shadow-lg p-3 mb-5 bg-white rounded col-md-auto table-responsive">
+            <div class="row">
+                <div class="col-3 mr-lg-n5">
+                    <label for="compum">UM incomplets: </label>
+                    <button id="compum" class='btn btn-sm btn-success'>
+                        <i class="fas fa-thumbs-up"></i>
+                    </button>
                 </div>
 
-                <div class="row">
-                    a
+                <div class="col-2 ml-lg-n2 ">
+                    <div class="form-group form-inline">
+                        <label for="numum">n° UM : </label>
+                        <input type="text" class="form-control ml-1 w-50" id="numum" placeholder="N°UM">
+                    </div>
+                </div>
+                <div class="col-3">
+
+                    <div class="form-group form-inline">
+                        <label for="blum"><button class="btn btn-sm btn-light">
+                            <i class="fas fa-chevron-right" style="font-size: 15px;"></i>
+                        </button>bon de livraison: </label>
+                        <input type="text" class="form-control ml-1 w-25" id="blum" disabled>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="form-group form-inline">
+                        <label for="seldep">zone dépôt: </label>
+                        <select type="text" class="form-control ml-1 w-25" id="seldep"></select>
+                    </div>
                 </div>
 
             </div>
         </div>
     </div>
 </div>
-
 <script>
     $(document).ready(function() {
+        $('#compum').click(function () {
+            if ($(this).hasClass('btn btn-sm btn-success')) {
+                $(this).attr('class', 'btn btn-light btn-sm butctrl');
+                $(this).find('i').attr('class', 'fas fa-thumbs-down');
+            }
+            else {
+                $(this).attr('class', 'btn btn-sm btn-success');
+                $(this).find('i').attr('class', 'fas fa-thumbs-up');
+            }
+        });
+
+        $("#seldep").combobox();
+        $("#toggle").on("click", function() {
+            $("#seldep").toggle();
+        });
 
     });
 </script>
