--- a/djangoproject/gestion_stock/templates/clientadd.html
+++ b/djangoproject/gestion_stock/templates/clientadd.html
@@ -16,18 +16,12 @@
 <br>
 
 <div class="container">
-    <div class="form-group row">
-        <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
-        </div>
+    <div class="form-group row text-center">
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
         <div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
         </div>
     </div>
 </div>
